# wickd

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: pip.yml  wheels.yml
src/algebra/: expression.cc  expression.h  expression_normal_order.cc  index.h  sqoperator.h  symbolic_term.cc  symbolic_term.h  tensor.cc  tensor.h
src/api/: api_wicked.cc  equation_api.cc  expression_api.cc  operator_api.cc  rational_api.cc  sqoperator_api.cc  tensor_api.cc  term_api.cc
src/diagrams/: graph_matrix.h  operator.h  operator_expression.cc  operator_expression.h  operator_product.cc  operator_product.h  wick_theorem.h  wick_theorem_canonicalize_graph.cc  wick_theorem_helpers.cc  wick_theorem_process_contractions.cc
src/helpers/: algebra.hpp  hash_utils.hpp  helpers.cc  helpers.h  orbital_space.h  stl.h  unordered_dense.h
src/wickd/: utils.py
tests/diag/: H0_dsrg2.ref  H0_dsrg3.ref  H0_dsrg3p.ref  H1_dsrg2.ref  H1_dsrg3.ref  H1_dsrg3p.ref  H2_dsrg2.ref  H2_dsrg3.ref  H2_dsrg3p.ref  H3_dsrg3.ref  H3_dsrg3p.ref  bench_bch.py  bench_bch_baseline.json  bench_canonicalize.py  bench_canonicalize_baseline.json  canon_cabv_vaavv_t2ab_t2ab.ref  canon_cabv_vabvv_t2ab_t2ab.ref  canon_cabv_vcabv_t2a_t2b.ref  canon_cabv_vcabv_t4ab_t2a_t2b.ref  canon_cabv_vcabv_t4mix_t2a.ref  canon_cabv_vccab_t3a_t3a.ref  canon_cabv_vccab_t4ab_t2a.ref  canon_cav_Fca_T1.ref  canon_cav_Fca_T2.ref  canon_cav_Fca_T4.ref  canon_cav_Vca_T1_T1.ref  canon_cav_Vca_T2_T1.ref  canon_cav_Vca_T4.ref  canon_cav_vaavv_t2aa_t2aa.ref  canon_cav_vcaav_t2ca_t2ca.ref  canon_cav_vcaav_t4ccaavv_t2ca.ref  canon_cav_vcaav_t4ccaavv_t2ca_t2ca.ref  canon_cav_vcaav_t4cccav_t2ca.ref  canon_ov_F_T4.ref  canon_ov_V_T3_T3.ref  canon_ov_V_T3_T3_T1.ref  canon_ov_V_T4.ref  canon_ov_V_T4_T1.ref  canon_ov_V_T4_T1_T1.ref  canon_ov_V_T4_T2.ref  (+10 more)
tests/expression/: test_expression.py  test_expression2.py  test_expression3.py  test_expression_product.py
tests/rational/: test_rational.py
tests/sqoperator/: test_sqoperator.py
tests/tensor/: test_tensor.py
tests/term/: test_term.py
tests/wickd/: test_basic.py
